--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -51,7 +51,7 @@
               </li> -->
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Sign Out</a>
+                  <a class="nav-link" href="{% url 'logout' %}">Sign Out</a>
                 </li>
               {% else %}
               <li class="nav-item">
