moved products urls to inventory app

--- a/personalcrm/quote/templates/quote/index.html
+++ b/personalcrm/quote/templates/quote/index.html
@@ -13,7 +13,7 @@
         id="index-table">
         <thead>
           <tr>
-            <th data-field="id" data-sortable="true" data-formatter="LinkFormatter">ID</th>
+            <th data-field="id" data-sortable="true" data-formatter="QuoteLinkFormatter">ID</th>
             <th data-field="customer" data-sortable="true">Customer</th>
             <th data-field="description">Description</th>
             <th data-field="reference">Reference</th>
