--- a/personalcrm/inventory/templates/inventory/index.html
+++ b/personalcrm/inventory/templates/inventory/index.html
@@ -13,7 +13,7 @@
         id="index-table">
         <thead>
           <tr>
-            <th data-field="pn" data-sortable="true" data-formatter="LinkFormatter">PN</th>
+            <th data-field="pn" data-sortable="true" data-formatter="InventoryLinkFormatter">PN</th>
             <th data-field="brand" data-sortable="true">Brand</th>
             <th data-field="title" data-sortable="true">Description</th>
             <th data-field="stock" data-sortable="true">Stock</th>
